feat: Add core application structure including lost item reporting, admin, and payment features.

--- a/.env
+++ b/.env
@@ -6,3 +6,13 @@ DATABASE_URL='postgresql://neondb_owner:npg_MlkYopNaGJ18@ep-quiet-fog-a1fcp113-p
 
 # Port (Optional)
 PORT=5000
+# ============================================
+# PAYMENT INTEGRATION (Flutterwave)
+# Optional for Phase 1, Required for Phase 5
+# ============================================
+# Get these from your Flutterwave dashboard: https://dashboard.flutterwave.com
+ FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-ce296dcf4c2bf6feb2fc06b41a6e10f0-X
+ FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-3c1eacd4568d09f6b5bae538af823ff6-X
+ FLUTTERWAVE_ENCRYPTION_KEY=FLWSECK_TEST7294efa2e36e
+# FLUTTERWAVE_WEBHOOK_SECRET=test-webhook-secret
+
