--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx -r dotenv/config server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
+    "vercel-build": "npm run build",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "seed:admin": "tsx script/seed-admin.ts",
