I've successfully linked the database in Vercel, specifically choosing Option B. I'm now viewing the "Quickstart" page within the Vercel/Neon dashboard. The screenshot confirms "Connect to a project" is selected, and it presents steps like pulling environment variables and installing necessary packages. It appears I'm on the right track!

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
 # Example (Local): postgresql://postgres:mypassword@localhost:5432/safilocate
 # Example (Neon/Cloud): postgresql://neondb_owner:......@ep-cool-....neon.tech/neondb?sslmode=require
-DATABASE_URL='postgresql://neondb_owner:npg_MlkYopNaGJ18@ep-quiet-fog-a1fcp113-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL='postgresql://neondb_owner:npg_KFxr5cZvV0XB@ep-empty-queen-ah8mhgcg-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require'
 
 # Port (Optional)
 PORT=5000
