--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "seed:admin": "tsx script/seed-admin.ts",
+    "seed": "tsx script/seed.ts",
     "test:phase1": "tsx script/test-phase1.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
