--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "framework": "vite",
+  "functions": {
+    "api/*.ts": {
+      "includeFiles": "server/**,shared/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/:match*",
