--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@types/react-dom": "^19.2.0",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.5.13",
+    "@vercel/node": "^5.5.23",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
