--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:client": "vite dev --port 5000",
     "dev": "tsx -r dotenv/config server/index.ts",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "NODE_ENV=production node dist/index.js",
     "vercel-build": "npm run db:push && npm run build",
     "check": "tsc",
     "db:push": "drizzle-kit push",
